--- a/get-routes.html
+++ b/get-routes.html
@@ -16,7 +16,7 @@
       #map {
         position: absolute;
         top: 0;
-        height:400px;
+        bottom:0;
         width: 100%;
       }
       .marker {
@@ -34,7 +34,7 @@
     mapboxgl.accessToken = 'pk.eyJ1IjoibGVubnltYXJ0aW5lemQiLCJhIjoiY2prMWZqNDJlMDBsMzNrb3h6dXZ1Zm50NyJ9.K_9DxP150GAPZI9CbLsJfQ';
     var map = new mapboxgl.Map({
       container: 'map',
-      style: 'mapbox://styles/mapbox/streets-v10',
+      style: 'mapbox://styles/lennymartinezd/cjk2v295836sa2sqz7k0xjeu6',
       center: [-99.95223783,  38.24814853],
       zoom: 4
     });
@@ -466,33 +466,59 @@
 
     map.on('load', function() {
       getStops();
-      getRoute();
+      for(i=0;i<30;i++){
+        getRouteBetweenStops(i);
+      }
     });
     
     var routes = {type:"LineString", coordinates: [] };
     var groupCoords = [];
 
-    function getRoute() {
+    function getRouteBetweenStops(j) {
       var longStart = [-112.074037,-116.054169,-118.006472,-118.152789,-118.399664,-119.649979,-119.374057,-111.891047,-109.859034,-105.591101,-103.418246,-98.029799,-96.221128,-94.10718,-88.300063,-83.121863,-76.886701,-77.231095,-77.036871,-81.188156,-82.910524,-84.083265,-90.04898,-94.348268,-97.516428,-99.404259,-101.831297,-106.650422,-107.851447,-109.328794];
       var longEnd = [-116.054169,-118.006472,-118.152789,-118.399664,-119.649979,-119.374057,-111.891047,-109.859034,-105.591101,-103.418246,-98.029799,-96.221128,-94.10718,-88.300063,-83.121863,-76.886701,-77.231095,-77.036871,-81.188156,-82.910524,-84.083265,-90.04898,-94.348268,-97.516428,-99.404259,-101.831297,-106.650422,-107.851447,-109.328794, -112.074037];
       var latStart = [33.448377,34.135558,36.281883,36.727229,37.361424,39.309514,39.373804,40.760779,41.543569,41.311367,43.895544,43.709428,41.778322,41.838596,41.296976,41.35033,40.273191,39.830929,38.907192,37.77817,37.274667,37.128977,35.149534,35.436756,35.46756,35.411994,35.221997,35.084386,35.14726,35.209143];
       var latEnd = [34.135558,36.281883,36.727229,37.361424,39.309514,39.373804,40.760779,41.543569,41.311367,43.895544,43.709428,41.778322,41.838596,41.296976,41.35033,40.273191,39.830929,38.907192,37.77817,37.274667,37.128977,35.149534,35.436756,35.46756,35.411994,35.221997,35.084386,35.14726,35.209143,33.448377];
-      for(i=1;i<30;i++) {
-        var directionsRequest = 'https://api.mapbox.com/directions/v5/mapbox/driving/' + longStart[i] + ',' + latStart[i] + ';' + longEnd[i] + ',' + latEnd[i] + '?geometries=geojson&access_token=' + mapboxgl.accessToken;
-        $.ajax({
+      var routeID = ["route1","route2","route3","route4","route5","route6","route7","route8","route9","route10","route11","route12","route13","route14","route15","route16","route17","route18","route19","route20","route21","route22","route23","route24","route25","route26","route27","route28","route29","route30"];
+
+      var directionsRequest = 'https://api.mapbox.com/directions/v5/mapbox/driving/' + longStart[j] + ',' + latStart[j] + ';' + longEnd[j] + ',' + latEnd[j] + '?geometries=geojson&access_token=' + mapboxgl.accessToken;
+      $.ajax({
+        method:'GET',
+        url: directionsRequest,
+      }).done(function(data) {
+          var route = data.routes[0].geometry;
+        map.addLayer({
+          id: routeID[j],
+          type: 'line',
+          source: {
+            type: 'geojson',
+          data: {
+            type: 'Feature',
+            geometry: route
+          }
+          },
+          paint: {
+            'line-width': 5,
+          'line-color' : '#FFF'
+          }
+        });
+      });
+      }
+
+    function getRoute() {
+      var start = [-112.074037,  34.048927];
+      var end = [-106.675461, 35.226997];
+      var directionsRequest = 'https://api.mapbox.com/directions/v5/mapbox/driving/' + start[0] + ',' + start[1] + ';' + end[0] + ',' + end[1] + '?geometries=geojson&access_token=' + mapboxgl.accessToken;
+      $.ajax({
         method: 'GET',
         url: directionsRequest,
-        }).done(function(data) {
-          var route = data.routes[0].geometry;
-          console.log(route);
-          for(j=0;i<route.length;i++){
-            groupCoords.push(route[j]);
-          }
-          map.addLayer({
-            id: 'route',
-            type: 'line',
-            source: {
-              type: 'geojson',
+      }).done(function(data) {
+        var route = data.routes[0].geometry;
+        map.addLayer({
+          id: 'route',
+          type: 'line',
+          source: {
+            type: 'geojson',
             data: {
               type: 'Feature',
               geometry: route
@@ -502,19 +528,20 @@
             'line-width': 5,
             'line-color' : "#FFF"
           }
-          });          
         });
-          
-      }
-    }
-
+        // this is where the code from the next step will go
+      });
+    }    
     function getStops() {
+      var cities = ["phoenix","olancha","manzanar"];
+      var i=0;
       geojson.features.forEach(function(marker) {
 
       // create a HTML element for each feature
       var el = document.createElement('div');
       el.className = 'marker';
-
+      el.id = cities[i];
+          i++;
       // make a marker for each feature and add to the map
       new mapboxgl.Marker(el)
       .setLngLat(marker.geometry.coordinates)
