--- a/interactive.html
+++ b/interactive.html
@@ -128,5 +128,114 @@
 		</div> <!--end of columns-->
 	</div>	<!--end of cluster1 div-->
 
+	<div class="row" id="cluster12">
+		<div class="col-xs-12 col-lg-7 offset-lg-2">
+			<h2 class="text-left">18. Content for Tekamah will go here</h2>
+			<div class="filler">&nbsp;</div><br>
+		</div> <!--end of content column-->
+		<div class="col-lg-3">
+			<h4>Interactive map for navigation goes here</h4>
+		</div><!--end of interactive map columns-->
+	</div>	<!--end of cluster2 div-->
+
+	<div class="row" id="cluster13">
+		<div class="col-xs-12 col-lg-12">
+			<h2 class="text-left">19. Interstate 80 E video will go here</h2>
+			<div class="filler-vid">&nbsp;</div><br>
+		</div> <!--end of columns-->
+	</div>	<!--end of cluster1 div-->
+
+	<div class="row" id="cluster14">
+		<div class="col-xs-12 col-lg-7 offset-lg-2">
+			<h2 class="text-left">20. Content for Perry will go here</h2>
+			<div class="filler">&nbsp;</div><br>
+			<h2 class="text-left">21. Content for Carbon Hill will go here</h2>
+			<div class="filler">&nbsp;</div><br>			
+		</div> <!--end of content column-->
+		<div class="col-lg-3">
+			<h4>Interactive map for navigation goes here</h4>
+		</div><!--end of interactive map columns-->
+	</div>	<!--end of cluster2 div-->
+
+	<div class="row" id="cluster15">
+		<div class="col-xs-12 col-lg-12">
+			<h2 class="text-left">22. Interstate 90 E video will go here</h2>
+			<div class="filler-vid">&nbsp;</div><br>
+		</div> <!--end of columns-->
+	</div>	<!--end of cluster1 div-->
+
+	<div class="row" id="cluster16">
+		<div class="col-xs-12 col-lg-7 offset-lg-2">
+			<h2 class="text-left">23. Content for Fremont will go here</h2>
+			<div class="filler">&nbsp;</div><br>
+			<h2 class="text-left">24. Content for Harrisburg will go here</h2>
+			<div class="filler">&nbsp;</div><br>
+			<h2 class="text-left">25. Content for Gettysburg will go here</h2>
+			<div class="filler">&nbsp;</div><br>			
+		</div> <!--end of content column-->
+		<div class="col-lg-3">
+			<h4>Interactive map for navigation goes here</h4>
+		</div><!--end of interactive map columns-->
+	</div>	<!--end of cluster2 div-->
+
+	<div class="row" id="cluster17">
+		<div class="col-xs-12 col-lg-12">
+			<h2 class="text-left">26. Interstate 270 S video will go here</h2>
+			<div class="filler-vid">&nbsp;</div><br>
+		</div> <!--end of columns-->
+	</div>	<!--end of cluster1 div-->
+
+	<div class="row" id="cluster18">
+		<div class="col-xs-12 col-lg-7 offset-lg-2">
+			<h2 class="text-left">27. Content for D.C. will go here</h2>
+			<div class="filler">&nbsp;</div><br>	
+		</div> <!--end of content column-->
+		<div class="col-lg-3">
+			<h4>Interactive map for navigation goes here</h4>
+		</div><!--end of interactive map columns-->
+	</div>	<!--end of cluster2 div-->
+
+	<div class="row" id="cluster19">
+		<div class="col-xs-12 col-lg-12">
+			<h2 class="text-left">28. Interstate 64 E video will go here</h2>
+			<div class="filler-vid">&nbsp;</div><br>
+		</div> <!--end of columns-->
+	</div>	<!--end of cluster1 div-->
+
+	<div class="row" id="cluster20">
+		<div class="col-xs-12 col-lg-7 offset-lg-2">
+			<h2 class="text-left">29. Content for Beckley will go here</h2>
+			<div class="filler">&nbsp;</div><br>	
+			<h2 class="text-left">30. Content for Mallie will go here</h2>
+			<div class="filler">&nbsp;</div><br>
+			<h2 class="text-left">31. Content for London will go here</h2>
+			<div class="filler">&nbsp;</div><br>	
+		</div> <!--end of content column-->
+		<div class="col-lg-3">
+			<h4>Interactive map for navigation goes here</h4>
+		</div><!--end of interactive map columns-->
+	</div>	<!--end of cluster2 div-->
+
+	<div class="row" id="cluster19">
+		<div class="col-xs-12 col-lg-12">
+			<h2 class="text-left">28. Interstate 64 E video will go here</h2>
+			<div class="filler-vid">&nbsp;</div><br>
+		</div> <!--end of columns-->
+	</div>	<!--end of cluster1 div-->
+
+	<div class="row" id="cluster20">
+		<div class="col-xs-12 col-lg-7 offset-lg-2">
+			<h2 class="text-left">29. Content for Beckley will go here</h2>
+			<div class="filler">&nbsp;</div><br>	
+			<h2 class="text-left">30. Content for Mallie will go here</h2>
+			<div class="filler">&nbsp;</div><br>
+			<h2 class="text-left">31. Content for London will go here</h2>
+			<div class="filler">&nbsp;</div><br>	
+		</div> <!--end of content column-->
+		<div class="col-lg-3">
+			<h4>Interactive map for navigation goes here</h4>
+		</div><!--end of interactive map columns-->
+	</div>	<!--end of cluster2 div-->
+	
 </body>
 </html>
