worst commit message of the day

--- a/interactive.html
+++ b/interactive.html
@@ -944,6 +944,16 @@
     	});
     }
     var $stop1 = $('#twenty-nine-palms-ca');
+    var $stop2 = $('#twenty-nine-palms-ca');
+    var $stop3 = $('#twenty-nine-palms-ca');
+    var $stop4 = $('#twenty-nine-palms-ca');
+    var $stop5 = $('#twenty-nine-palms-ca');
+    var $stop6 = $('#twenty-nine-palms-ca');
+    var $stop7 = $('#twenty-nine-palms-ca');
+    var $stop8 = $('#twenty-nine-palms-ca');
+    var $stop9 = $('#twenty-nine-palms-ca');
+    var $stop10 = $('#twenty-nine-palms-ca');
+
 
 			$stop1.waypoint(function(direction) {
     	
