update map z-index so it hides behind videos and get rid of dummy text for where map will live.

--- a/interactive.html
+++ b/interactive.html
@@ -29,7 +29,7 @@
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
-				<h4>Interactive map for navigation goes here</h4>
+				&nbsp;
 				<div id="map-nav">
 					<div id="map"></div>
 				</div>
@@ -84,7 +84,7 @@
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
-				<h4>Interactive map for navigation goes here</h4>
+				&nbsp;
 			</div><!--end of interactive map columns-->
 		</div>	<!--end of cluster2 div-->
 
@@ -111,7 +111,7 @@
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
-				<h4>Interactive map for navigation goes here</h4>
+				&nbsp;
 			</div><!--end of interactive map columns-->
 		</div>	<!--end of cluster2 div-->
 
@@ -134,7 +134,7 @@
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
-				<h4>Interactive map for navigation goes here</h4>
+				&nbsp;
 			</div><!--end of interactive map columns-->
 		</div>	<!--end of cluster2 div-->
 
@@ -153,7 +153,7 @@
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
-				<h4>Interactive map for navigation goes here</h4>
+				&nbsp;
 			</div><!--end of interactive map columns-->
 		</div>	<!--end of cluster2 div-->
 
@@ -176,7 +176,7 @@
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
-				<h4>Interactive map for navigation goes here</h4>
+				&nbsp;
 			</div><!--end of interactive map columns-->
 		</div>	<!--end of cluster2 div-->
 
@@ -203,7 +203,7 @@
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
-				<h4>Interactive map for navigation goes here</h4>
+				&nbsp;
 			</div><!--end of interactive map columns-->
 		</div>	<!--end of cluster2 div-->
 
@@ -222,7 +222,7 @@
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
-				<h4>Interactive map for navigation goes here</h4>
+				&nbsp;
 			</div><!--end of interactive map columns-->
 		</div>	<!--end of cluster2 div-->
 
@@ -249,7 +249,7 @@
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
-				<h4>Interactive map for navigation goes here</h4>
+				&nbsp;
 			</div><!--end of interactive map columns-->
 		</div>	<!--end of cluster2 div-->
 
@@ -272,7 +272,7 @@
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
-				<h4>Interactive map for navigation goes here</h4>
+				&nbsp;
 			</div><!--end of interactive map columns-->
 		</div>	<!--end of cluster2 div-->
 
@@ -311,7 +311,7 @@
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
-				<h4>Interactive map for navigation goes here</h4>
+				&nbsp;
 			</div><!--end of interactive map columns-->
 		</div>	<!--end of cluster2 div-->
 
@@ -330,7 +330,7 @@
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
-				<h4>Interactive map for navigation goes here</h4>
+				&nbsp;
 			</div><!--end of interactive map columns-->
 		</div>	<!--end of cluster2 div-->
 
