add modal map for desktop navigation and then link the markers to the page.

--- a/draw-routes.html
+++ b/draw-routes.html
@@ -36,7 +36,8 @@
       container: 'nav-map',
       style: 'mapbox://styles/lennymartinezd/cjk2v295836sa2sqz7k0xjeu6',
       center: [-99.95223783,  38.24814853],
-      zoom: 4.80
+      minZoom: 4.75,
+      maxZoom: 10
     });
         var geojson = {
             "type": "FeatureCollection",
