--- a/interactive.html
+++ b/interactive.html
@@ -12,25 +12,23 @@
   <script src="./js/jquery.waypoints.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
   <style>
-		.modal-nav .modal-xl{
+		.navigation-mapscreen .modal-xl-lenny{
 			max-width: 1500px !important;
 		}
 
-		.modal-nav .modal-open .modal{
+		.navigation-mapscreen .modal-open .modal{
 			padding: 0px 20px 0px 20px !important;
 		}
 
-		.modal-nav #map2{
-/*			width:100% !important;
-*/			height:700px;
-
+		.navigation-mapscreen #map2{
+			height:700px;
 		}
   </style>
 </head>
 <body>
 
-<div class="modal modal-nav" id="navigationModal" tabindex="-1" role="dialog" aria-label="navigationModal" aria-hidden="true">
-	<div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+<div class="modal fade navigation-mapscreen" id="navigationModal" tabindex="-1" role="dialog" aria-label="navigationModal" aria-hidden="false" >
+	<div class="modal-dialog modal-dialog-centered modal-xl-lenny" role="document">
 		<div class="modal-content">
 			<div class="modal-body">
 				<div class="container-fluid">
@@ -64,21 +62,13 @@
 			<div class="col-xs-12 col-lg-7 offset-lg-1">
 				<div class="content-stop" id="twenty-nine-palms-ca">
 					<h2 class="text-left">2. Content for Twentynine Palms will go here</h2>
-					<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#navigationModal">
+					<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#navigationModal">
 					  Launch demo modal
-					</button>
+					</button> --><br>
 					<div class="filler">&nbsp;</div><br>
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
-					<div id="map-nav">
-						<div id="map"></div><br>
-						<div class="travel-info">
-							<p><span id="city-name">Phoenix</span>,&nbsp;<span id="state-name">Arizona</span></p>
-							<p>Highway: <span id="highway-name">Interstate 10 West</span></p>
-							<p>Population: <span id="stop-population">1,555,324</span></p>
-						</div>
-					</div>
 				</button>
 			</div><!--end of interactive map columns-->
 		</div>	<!--end of cluster2 div-->
@@ -378,12 +368,22 @@
 				</div>
 			</div> <!--end of content column-->
 			<div class="col-lg-3">
-				&nbsp;
+						<div id="map-nav">
+						<a data-toggle="modal" data-target="#navigationModal">
+						<div id="map"></div><br>
+						<div class="travel-info">
+							<h4 class="text-center"><span id="highway-name">Interstate 10 West</span></h4>
+							<p class="text-center"><span id="city-name">Phoenix</span>,&nbsp;<span id="state-name">Arizona</span><br>				
+							Population: <span id="stop-population">1,555,324</span></p>
+						</div>
+						</a>
+					</div>
 			</div><!--end of interactive map columns-->
 		</div>	<!--end of cluster2 div-->
 
 	</div> <!--end of container-fluid -->
 	<script>
+
 		var longStart = [-112.074037,-116.054169,-118.006472,-118.152789,-118.399664,-119.649979,-119.374057,-111.891047,-109.859034,-105.591101,-103.418246,-98.029799,-96.221128,-94.10718,-88.300063,-83.121863,-76.886701,-77.231095,-77.036871,-81.188156,-82.910524,-84.083265,-90.04898,-94.348268,-97.516428,-99.404259,-101.831297,-106.650422,-107.851447,-109.328794];
 		var latStart = [33.448377,34.135558,36.281883,36.727229,37.361424,39.309514,39.373804,40.760779,41.543569,41.311367,43.895544,43.709428,41.778322,41.838596,41.296976,41.35033,40.273191,39.830929,38.907192,37.77817,37.274667,37.128977,35.149534,35.436756,35.46756,35.411994,35.221997,35.084386,35.14726,35.209143];
     var geojson={
@@ -913,6 +913,14 @@
       zoom: 6
     });
 
+    map.on('load', function() {
+    	getStops();
+      for(i=0;i<30;i++){
+    		getRouteBetweenStops(i);
+    	}
+    });
+
+
     var map2 = new mapboxgl.Map({
       container: 'map2',
       style: 'mapbox://styles/lennymartinezd/cjk2v295836sa2sqz7k0xjeu6',
@@ -921,18 +929,16 @@
       maxZoom:24
     });
 
-    map.on('load', function() {
-    	getStops();
-      for(i=0;i<30;i++){
-    		getRouteBetweenStops(i);
-    	}
-    });
-
     map2.on('load', function() {
-    	console.log('20');
-    	getStops2();
-      drawRoadTripRoute(longStart,latStart);
+        	getStops2();
+      		drawRoadTripRoute(longStart,latStart);
     });
+		$('#navigationModal').on('shown.bs.modal', function () { // chooseLocation is the id of the modal.
+		    map2.resize();
+	 	});
+    
+
+    
 
     function getRouteBetweenStops(j) {
       var longStart = [-112.074037,-116.054169,-118.006472,-118.152789,-118.399664,-119.649979,-119.374057,-111.891047,-109.859034,-105.591101,-103.418246,-98.029799,-96.221128,-94.10718,-88.300063,-83.121863,-76.886701,-77.231095,-77.036871,-81.188156,-82.910524,-84.083265,-90.04898,-94.348268,-97.516428,-99.404259,-101.831297,-106.650422,-107.851447,-109.328794];
@@ -1032,22 +1038,26 @@
     		.addTo(map);
     	});
     }
-
+    // var cow = 'onclick="$(''#myModal'').modal(''hide'')"'
     function getStops2() {
     	//console.log("eh3");
     	geojson.features.forEach(function(marker) {
     	//console.log(marker.properties.marker);
     	// create a HTML element for each feature
     	var el = document.createElement('div');
-    	el.className = 'marker '+ marker.properties.marker;
+    	el.className = 'marker';
     	// make a marker for each feature and add to the map
     	new mapboxgl.Marker(el)
     		.setLngLat(marker.geometry.coordinates)
 		    .setPopup(new mapboxgl.Popup({ offset: 25 }) // add popups
-    		.setHTML('<h4>' + marker.properties.city + '<br>'+marker.properties.state+'</h4><p>Population:&nbsp;' + marker.properties.population + '</p><p><a href="#'+marker.properties.pageID+'">@@Go there@@</a></p>'))
+    		.setHTML('<h5>' + marker.properties.city + '<br>'+marker.properties.state+'</h5><p>Population:&nbsp;' + marker.properties.population + '</p><p><a class="modalcloser" href="#'+marker.properties.pageID+'" data-dismiss="modal">@@GOHERE@@</a></p>'))
     		.addTo(map2);
     	});
     }
+    $(".modalcloser").click(function(){
+  		console.log('mooo');
+  		$('#navigationModal').modal('hide');
+    });
 
 			var $stop1 = $('#twenty-nine-palms-ca');
 			var $stop2 = $('#olancha-ca');
