--- a/interactive.html
+++ b/interactive.html
@@ -8,7 +8,6 @@
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css' rel='stylesheet' />
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/interactive.css">
   <script src="./js/jquery.waypoints.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
   <style>
@@ -23,6 +22,8 @@
 		max-height: 1200px;
 	}
   </style>
+  <link rel="stylesheet" href="./css/interactive.css">
+
 </head>
 <body>
 
@@ -63,8 +64,9 @@
 
 		<div class="row" id="cluster2">
 			<div class="col-xs-12 col-lg-7 offset-lg-1">
+				&nbsp;
 				<div class="content-stop" id="twenty-nine-palms-ca">
-					<h2 class="text-left">2. Content for Twentynine Palms will go here</h2>
+					<h2 class="text-left">The Virginian Cocktails</h2>
 					<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#navigationModal">
 					  Launch demo modal
 					</button> --><br>
